<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="lineageparts_title">LineageOS Settings</string>
    <string name="loading">Loading\u2026</string>
    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose app</string>
    <string name="reset">Reset</string>
    <string name="advanced">Advanced</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="summary_empty" translatable="false" />
    <string name="privacy_settings_title">Privacy</string>
    <string name="privacy_settings_category" translatable="false">LineageOS</string>
    <string name="channel_light_settings_id" translatable="false">light_settings</string>
    <string name="channel_light_settings_name">Light settings preview</string>
    <string name="edit_light_settings">Edit light settings</string>
    <string name="pulse_speed_title">Pulse length and speed</string>
    <string name="default_time">Normal</string>
    <string name="custom_time">Custom</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="brightness">Brightness level</string>
    <string name="pulse_length_always_on">Always on</string>
    <string name="pulse_length_blink">Blink</string>
    <string name="pulse_length_very_short">Very short</string>
    <string name="pulse_length_short">Short</string>
    <string name="pulse_length_normal">Normal</string>
    <string name="pulse_length_long">Long</string>
    <string name="pulse_length_very_long">Very long</string>
    <string name="pulse_speed_very_fast">Very fast</string>
    <string name="pulse_speed_fast">Fast</string>
    <string name="pulse_speed_normal">Normal</string>
    <string name="pulse_speed_slow">Slow</string>
    <string name="pulse_speed_very_slow">Very slow</string>
    <string name="light_brightness_title">Brightness levels</string>
    <string name="light_brightness_normal">Normal</string>
    <string name="light_brightness_zen">Do Not Disturb</string>
    <string name="charging_control_title">Charging control</string>
    <string name="charging_control_enable_title">Enable charging control</string>
    <string name="charging_control_mode_title">Charging mode</string>
    <string name="charging_control_mode_auto_title">Automatic schedule</string>
    <string name="charging_control_mode_auto_summary">Automatically determine when to start charging based on alarms set</string>
    <string name="charging_control_mode_custom_title">Custom schedule</string>
    <string name="charging_control_mode_custom_summary">Set a target time to full charge</string>
    <string name="charging_control_mode_limit_title">Limit charging</string>
    <string name="charging_control_mode_limit_summary">Limit charging to a certain percentage</string>
    <string name="charging_control_start_time_title">Start time</string>
    <string name="charging_control_start_time_summary">Charging control activates when you start charging after %s</string>
    <string name="charging_control_target_time_title">Target time to full charge</string>
    <string name="charging_control_target_time_summary">Battery will be fully charged by %s</string>
    <string name="charging_control_limit_title">Limit</string>
    <string name="charging_control_limit_summary">Current limit: %d%%</string>
    <string name="battery_light_title">Battery light</string>
    <string name="battery_light_enable_title">Enable battery light</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="battery_light_full_charge_disabled_title">Turn off when fully charged</string>
    <string name="battery_light_list_title">Colors</string>
    <string name="battery_light_low_color_title">Battery low</string>
    <string name="battery_light_medium_color_title">Charging</string>
    <string name="battery_light_full_color_title">Fully charged</string>
    <string name="battery_light_brightness_normal" translatable="false">@string/light_brightness_normal</string>
    <string name="battery_light_brightness_zen" translatable="false">@string/light_brightness_zen</string>
    <string name="notification_light_title">Notification light</string>
    <string name="notification_light_enable_title">Enable notification light</string>
    <string name="notification_light_general_title">General</string>
    <string name="notification_light_advanced_title">Advanced</string>
    <string name="notification_light_applist_title">Apps</string>
    <string name="notification_light_phonelist_title">Phone</string>
    <string name="notification_light_use_custom">Use custom values</string>
    <string name="notification_light_default_value">Default</string>
    <string name="notification_light_missed_call_title">Missed call</string>
    <string name="notification_light_voicemail_title">Voicemail</string>
    <string name="notification_light_brightness_normal" translatable="false">@string/light_brightness_normal</string>
    <string name="notification_light_brightness_zen" translatable="false">@string/light_brightness_zen</string>
    <string name="notification_light_screen_on">Lights with screen on</string>
    <string name="notification_light_zen_mode">Lights in Do Not Disturb mode</string>
    <string name="keywords_lights_brightness_level">dim leds brightness</string>
    <string name="notification_light_automagic">Choose colors automatically</string>
    <string name="notification_light_automagic_summary">Choosing colors automatically</string>
    <string name="led_notification_title">Light settings</string>
    <string name="led_notification_text">LED light enabled by settings</string>
    <string name="notification_light_add_apps_empty_summary">To add per app control, activate \'%1$s\' and press \'Add\'</string>
    <string name="live_display_summary">Optimize your screen based on time of day and ambient conditions to improve readability and reduce eyestrain</string>
    <string name="live_display_mode">Display mode</string>
    <string name="live_display_color_temperature_title">Color temperature</string>
    <string name="live_display_color_temperature_summary">Day: <xliff:g id="day_temperature">%1$d</xliff:g>K  Night: <xliff:g id="night_temperature">%2$d</xliff:g>K</string>
    <string name="live_display_color_temperature_label"><xliff:g id="degrees">%1$d</xliff:g>K</string>
    <string name="live_display_day">Day</string>
    <string name="live_display_night">Night</string>
    <string name="live_display_outdoor_mode_title">Automatic outdoor mode</string>
    <string name="live_display_outdoor_mode_summary">Increase brightness and saturation automatically under bright sunlight</string>
    <string name="live_display_anti_flicker_title">Anti flicker</string>
    <string name="live_display_anti_flicker_summary">Prevent extensive flickering and reduce eye strain in low light conditions. It might degrade color accuracy and affect the way some items are displayed.</string>
    <string name="live_display_low_power_title">Reduce power consumption</string>
    <string name="live_display_low_power_summary">Adjust display for lowest power consumption without degradation</string>
    <string name="live_display_enhance_color_title">Enhance colors</string>
    <string name="live_display_enhance_color_summary">Improve color vibrance of flesh tones, scenery, and other images</string>
    <string name="live_display_color_profile_title" translatable="false">@string/battery_light_list_title</string>
    <string name="live_display_color_profile_preview">Color preview</string>
    <string name="live_display_color_profile_standard_title">Standard</string>
    <string name="live_display_color_profile_standard_summary">Accurate colors and bright whites</string>
    <string name="live_display_color_profile_natural_title">Natural</string>
    <string name="live_display_color_profile_natural_summary">Realistic colors and flesh tones</string>
    <string name="live_display_color_profile_dynamic_title">Dynamic</string>
    <string name="live_display_color_profile_dynamic_summary">Enhanced colors and bright whites</string>
    <string name="live_display_color_profile_cinema_title">Cinema</string>
    <string name="live_display_color_profile_cinema_summary">Perfect color reproduction for video</string>
    <string name="live_display_color_profile_astronomy_title">Astronomy</string>
    <string name="live_display_color_profile_astronomy_summary">Deep red for preserving night vision</string>
    <string name="live_display_color_profile_photography_title">Photography</string>
    <string name="live_display_color_profile_photography_summary">Perfect color reproduction for photos</string>
    <string name="live_display_color_profile_basic_title">Basic</string>
    <string name="live_display_color_profile_basic_summary">Use the display uncalibrated</string>
    <string name="live_display_color_profile_adaptive_title">Adaptive</string>
    <string name="live_display_color_profile_adaptive_summary">Colors adapt to ambient conditions</string>
    <string name="live_display_color_profile_reading_title">Reading</string>
    <string name="live_display_color_profile_reading_summary">Warmer colors for less eye strain</string>
    <string name="live_display_color_profile_srgb_title">sRGB</string>
    <string name="live_display_color_profile_srgb_summary">Colors accurate to the sRGB color space</string>
    <string name="button_pref_title">Buttons</string>
    <string name="hardware_keys_power_key_title">Power button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="volbtn_music_controls_title">Control playback</string>
    <string name="volbtn_music_controls_summary">Seek music tracks by long pressing the volume keys while the display is off</string>
    <string name="volbtn_cursor_control_title">Keyboard cursor control</string>
    <string name="power_end_call_title">End call</string>
    <string name="power_end_call_summary">End the current call by pressing the power button</string>
    <string name="volume_answer_call_title">Answer call</string>
    <string name="volume_answer_call_summary">Answer incoming calls by pressing the volume buttons</string>
    <string name="extras_title">Extras</string>
    <string name="additional_buttons_title">Additional buttons</string>
    <string name="navigation_bar_category">Navigation bar</string>
    <string name="navigation_bar_enable_taskbar_title">Enable taskbar</string>
    <string name="torch_long_press_power_gesture_title">Long press for torch</string>
    <string name="torch_long_press_power_gesture_desc">Activate the torch by long pressing the power button while the display is off</string>
    <string name="torch_long_press_power_timeout_title">Automatically turn torch off</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Show current network traffic levels in the status bar</string>
</resources>