<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2016 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017-2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:lineage="http://schemas.android.com/apk/res-auto"
        android:key="button_settings"
        android:title="@string/button_pref_title">

    <PreferenceCategory
        android:key="navigation_bar_category"
        android:title="@string/navigation_bar_category" >

        <SwitchPreferenceCompat
                android:key="enable_taskbar"
                android:title="@string/navigation_bar_enable_taskbar_title" />

        <lineageos.preference.LineageSystemSettingSwitchPreference
                android:key="navigation_bar_menu_arrow_keys"
                android:title="@string/navigation_bar_arrow_keys_title"
                android:summary="@string/navigation_bar_arrow_keys_summary"
                android:defaultValue="false" />

        <lineageos.preference.SecureSettingSwitchPreference
                android:key="sysui_nav_bar_inverse"
                android:title="@string/navigation_bar_invert_layout_title"
                android:summary="@string/navigation_bar_invert_layout_summary"
                android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="power_key"
        android:title="@string/hardware_keys_power_key_title" >

        <SwitchPreferenceCompat
            android:key="power_end_call"
            android:title="@string/power_end_call_title"
            android:summary="@string/power_end_call_summary"
            android:persistent="false"/>

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="torch_long_press_power_gesture"
            android:title="@string/torch_long_press_power_gesture_title"
            android:summary="@string/torch_long_press_power_gesture_desc"
            android:defaultValue="false"
            lineage:requiresConfig="@*android:bool/config_supportLongPressPowerWhenNonInteractive" />

        <ListPreference
            android:key="torch_long_press_power_timeout"
            android:dialogTitle="@string/torch_long_press_power_timeout_title"
            android:title="@string/torch_long_press_power_timeout_title"
            android:entries="@array/torch_long_press_power_timeout_entries"
            android:entryValues="@array/torch_long_press_power_timeout_values"
            android:dependency="torch_long_press_power_gesture"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="volume_keys"
        android:title="@string/hardware_keys_volume_keys_title" >

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="volume_answer_call"
            android:title="@string/volume_answer_call_title"
            android:summary="@string/volume_answer_call_summary"
            android:defaultValue="false" />

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="volbtn_music_controls"
            android:title="@string/volbtn_music_controls_title"
            android:summary="@string/volbtn_music_controls_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="volume_key_cursor_control"
            android:dialogTitle="@string/volbtn_cursor_control_title"
            android:title="@string/volbtn_cursor_control_title"
            android:entries="@array/volbtn_cursor_control_entries"
            android:entryValues="@array/volbtn_cursor_control_values"
            android:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="extras_category"
        android:title="@string/extras_title" >

        <lineageos.preference.RemotePreference
            android:key="additional_buttons"
            android:title="@string/additional_buttons_title"
            lineage:requiresAction="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS">
            <intent
                android:action="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS" />
        </lineageos.preference.RemotePreference>

    </PreferenceCategory>

</PreferenceScreen>
